--- a/src/views/Components/Dash_Task/DashPrincipal.css
+++ b/src/views/Components/Dash_Task/DashPrincipal.css
@@ -1,6 +1,90 @@
-.DashPrincipal {
-    width: 100%;
+.dashPrincipal {
+    flex-grow: 1;
     height: 100%;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 60px;
+    padding: 60px 40px; 
+}
+.rec {
+    height: auto;
+    min-height: 350px;
+    width: auto;
+    max-width: 800px;
+    flex: 1 1 calc(50% - 60px);
+    box-sizing: border-box; 
+    background-color: #f0f0f0; 
+    padding: 40px;
+    border: 1px solid #ccc;
+    border-radius: 10px 10px 10px 10px;
+}
+.newTask {
+    background: rgba(255, 178, 178, 100);
+    border: 3px solid rgba(254, 112, 112, 100);
+}
+.pendingTask {
+    background: rgba(107, 219, 251, 100);
+    border: 3px solid rgba(40, 127, 152, 100);
+}
+.progressTask {
+    background: rgba(119, 212, 232, 100);
+    border: 3px solid rgba(50, 169, 195, 100);
+    margin-bottom: 120px;
+}
+.finishTask {
+    background: rgba(255, 220, 178, 100);
+    border: 3px solid rgba(213, 166, 109, 100);
+    margin-bottom: 120px;
+}
+
+.tittleTask {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    justify-content: left;
+    width: 90%;
+}
+
+.dashTaskHeader{
+    display:flex; 
     flex-direction: row;
+    margin-bottom: 30px;
+}
+.cantTask{
+    width: 130px;
+    height: 40px;
+    background: rgba(254, 112, 112, 100);
+    z-index: 40;
+    border-radius: 0 0 0 0;
+}
+
+.numTask{
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: #ffffff;
+}
+.dashTaskBody{
+    display:flex; 
+}
+.textCard{
+    width: auto;
+    height: auto;
+    background: rgba(254, 112, 112, 100);
+    z-index: 40;
+    border-radius: 0 0 0 0;
+}
+.textTask{
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    color: #ffffff;
 }
