--- a/src/styles/Principal.css
+++ b/src/styles/Principal.css
@@ -9,7 +9,15 @@ body {
     background: linear-gradient(135deg, #E3F2FD, #BBDEFB);
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
 
+.applicantForm {
+    display: flex;
+    flex:1; 
+    height: 100%;
+    background: linear-gradient(135deg, #E3F2FD, #BBDEFB);
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
 }
 
 .containerHome {
@@ -87,12 +95,29 @@ body {
     width: 80%;
 }
 
+.createForm {
+    padding-top: 50px;
+    color: rgba(5, 40, 122, 0.805);
+    white-space: nowrap;
+    text-align: center; 
+    width: 100%;
+}
+
 .formPrincipal {
     padding: 80px 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 22px; 
+}
+
+.formPrincipalTask {
+    padding: 10px 10%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 22px; 
+    width: 100%;
 }
 
 .textoFormulario {
@@ -136,7 +161,19 @@ body {
     margin-bottom: 20px;
 }
 
+.selectPrincipalForm {
+    display: flex;
+    gap: 22px; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
 .selectPrincipal:focus-within {
+    margin-bottom: 90px; 
+}
+
+.selectPrincipalForm:focus-within {
     margin-bottom: 90px; 
 }
 
